# vnm_msdf_text

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci-freebsd.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
cmake/: vnm_msdf_text-config.cmake.in  workspace_deps_overrides.cmake
docs/: FOLLOW_UPS.md
include/vnm_msdf_text/: msdf_text.h
src/: msdf_text.cpp
tests/: msdf_text_tests.cpp
